Oracle Linux is currently an _unsupported_ OS as far as ansible python interpreter discovery is concerned, so have to set the path.

--- a/group_vars/control/inventory_sources.yml
+++ b/group_vars/control/inventory_sources.yml
@@ -139,6 +139,7 @@ controller_inventory_sources:
         # set the ansible_host variable to connect with the private IP address without changing the hostname
         ansible_host: private_ip_address
         ansible_user: "'ec2-user'"
+        ansible_python_interpreter: "'/usr/bin/python'"
     overwrite: true
     update_on_launch: false
     update_cache_timeout: 0
@@ -170,6 +171,7 @@ controller_inventory_sources:
         # set the ansible_host variable to connect with the private IP address without changing the hostname
         ansible_host: private_ip_address
         ansible_user: "'ec2-user'"
+        ansible_python_interpreter: "'/usr/bin/python'"
     overwrite: true
     update_on_launch: false
     update_cache_timeout: 0
@@ -203,6 +205,7 @@ controller_inventory_sources:
         # set the ansible_host variable to connect with the private IP address without changing the hostname
         ansible_host: private_ip_address
         ansible_user: "'ec2-user'"
+        ansible_python_interpreter: "'/usr/bin/python'"
     overwrite: true
     update_on_launch: false
     update_cache_timeout: 0
