--- a/inventory/inventory_ol7_dev.aws_ec2.yml
+++ b/inventory/inventory_ol7_dev.aws_ec2.yml
@@ -12,6 +12,7 @@ hostnames:
 compose:
   ansible_host: private_ip_address
   ansible_user: "'ec2-user'"
+  ansible_python_interpreter: "'/usr/bin/python'"
 keyed_groups:
   - prefix: cv
     key: tags['ContentView']
