Add locations and capsules to choices.

--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -224,7 +224,9 @@ controller_templates:
           variable: resource_info_survey
           choices:
             - organizations
+            - locations
             - subscriptions
+            - capsules
             - hosts
             - content_views
             - lifecycle_environments
