Set fact for capsule hostname.

--- a/server_register_via_api.yml
+++ b/server_register_via_api.yml
@@ -40,9 +40,13 @@
         resource: capsules
       register: capsules_resource_info_result
 
+    - name: Select capsule hostname from capsules resource_info
+      ansible.builtin.set_fact:
+        capsule_hostname: "{{ capsules_resource_info_result.resources | selectattr('name', 'search', '^satellite') | map(attribute='name') }}"
+
     - name: Generate a host registration command
       ansible.builtin.uri:
-        url: "https://{{ capsules_resource_info_result.resources | selectattr('name', 'search', '^satellite') | map(attribute='name') | [0] }}/api/registration_commands/"
+        url: "https://{{ capsule_hostname }}/api/registration_commands/"
         user: "{{ satellite_username }}"
         password: "{{ satellite_password }}"
         method: POST
