--- a/server_register_via_api.yml
+++ b/server_register_via_api.yml
@@ -90,8 +90,8 @@
       ansible.builtin.assert:
         that:
           - '"system identity" in sub_man_status_post.stdout'
-          - '"name: " + inventory_hostname in sub_man_status_post.stdout'
-          - '"org name: " + organization in sub_man_status_post.stdout'
+          - 'inventory_hostname in sub_man_status_post.stdout'
+          - 'organization in sub_man_status_post.stdout'
         fail_msg: "Content Host registration unsuccessful."
         success_msg: "Content Host registration verification successful."
 ...
